추천 레시피 트랜잭셔널 적용